# Godot-mod-template

./: CMakeLists.txt  README.md  README1.md  prerequisites.sh
demo/.godot/: extension_list.cfg
demo/.godot/editor/: create_recent.CanvasItem  filesystem_cache8  project_metadata.cfg
demo/addons/: template.gdextension
src/: Template.cpp  Template.h  register_types.cpp  register_types.h
